--- a/packages/CheckBox/checkBox.scss
+++ b/packages/CheckBox/checkBox.scss
@@ -7,7 +7,9 @@
     width: auto;
     cursor: pointer;
     user-select: none;
-
+    .asoul-text_inner{
+        @include font_color(primary_color);
+    }
     &.mini {
         $size: $mini;
         height: $size;
